feat: added content

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <header>
     <h1>header</h1>
 </header>
+<div class="content">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta, explicabo harum perspiciatis quas quia quod rem temporibus vel voluptatibus. Aliquam, earum necessitatibus nihil quidem repudiandae sapiente veritatis vero voluptates!</p>
+</div>
 </body>
 </html>
