feat: added footer

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 <div class="content">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dicta, explicabo harum perspiciatis quas quia quod rem temporibus vel voluptatibus. Aliquam, earum necessitatibus nihil quidem repudiandae sapiente veritatis vero voluptates!</p>
 </div>
+<footer>
+    <h1>footer</h1>
+</footer>
 </body>
 </html>
